sonda-core/tests/snapshots/v2_fixture_examples__valid_defaults_logs_default_encoder_normalizes.snap
---
source: sonda-core/tests/v2_fixture_examples.rs
expression: normalized
---
{
  "version": 2,
  "entries": [
    {
      "signal_type": "logs",
      "name": "app_logs",
      "rate": 5.0,
      "log_generator": {
        "type": "template",
        "templates": [
          {
            "message": "hello",
            "field_pools": {}
          }
        ]
      },
      "encoder": {
        "type": "json_lines"
      },
      "sink": {
        "type": "stdout"
      }
    }
  ]
}
